# PyRES

./: .gitignore  LICENSE  README.md  active_acoustics.py  bootstrap.bat  bootstrap.sh  coloration_test.py  dafx.py  deverb-otala-test.py  environment.yml  flamo_trainer.py  loss.py  loss_funcs.py  main.py  pyproject.toml  requirements.txt  shell.nix  tempCodeRunnerFile.py  test.py
.github/workflows/: code_update.yml  installation.yml  test-install.yml
PyRES/: dataset_api.py  functional.py  loss_functions.py  physical_room.py  plots.py  rds.py  res.py  utils.py  virtual_room.py
examples/: E1_virtual-room.py  E2_physical-room-1.py  E2_physical-room.py  E3_physical-room-2.py  E3_physical-room-3.py  E3_res.py  E4_res.py  E4_training-1.py  E5_training-1.py  E5_training-2.py  E6_training-2.py  example_FDN.py  example_FIRs.py  example_allpass.py  example_loadResults.py  example_mixingMatrix.py  example_modalRev.py  example_unitary.py  example_unitaryReverb.py
pyRES/: full_system.py  functional.py  loss_functions.py  metrics.py  physical_room.py  plots.py  test.py  utils.py  virtual_room.py
tests/: T1_virtual-room.py  T2_physical-room.py  T3_res.py  T4_training.py
toolbox/: example.py  example_loadResults.py  example_modalRev.py  example_unitary.py  full_system.py  functional.py  loss_functions.py  optimization.py  physical_room.py  plots.py  room_loader.py  subclasses.py  template_class.py  utils.py  virtual_room.py
toolbox/examples/: example_FDN.py  example_FIRs.py  example_allpass.py  example_unitary.py
