[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyres"
version = "0.1.0"
description = "PyRES: A Python library for Reverberation Enhancement System development and simulation."
authors = [
  { name="Your Name", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flamo",
    "pyfar",
    "pyrato",
    "seaborn",
    "matplotlib",
    "pyqt5",
]
