[project]
name = "pyres-lib"
version = "0.1.0"
description = "PyRES: A Python library for Reverberation Enhancement System development and simulation."
authors = [{ name = "Gian Marco De Bortoli", email = "gian.debortoli@aalto.fi" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Audio",
    "Intended Audience :: Developers",
]

[project.dependencies]
flamo = "0.1.2"
torch = "2.7.0"
torchaudio = "2.7.0"
numpy = "2.2.5"
pyfar = "0.7.2"
pyrato = "0.4.0"
seaborn = "0.13.2"
matplotlib = "3.10.1"
pyqt6 = "6.9.0"
pysoundfile = "0.9.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"